manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "mnsocialtraderks"
    labels:
        app: "mnsocialtraderks"
spec:
    type: ClusterIP
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "mnsocialtraderks"
